# tca

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  INSIGHTS.md  README.md  alembic.ini  basedpyrightconfig.json  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: __init__.py  env.py
alembic/versions/: 4b080ca28e36_create_bot_deliveries_table.py  5f8b0d1e2a44_create_base_content_and_dedupe_tables.py  70bbc5b6d2f1_create_base_accounts_channels_groups.py  8f3a7b0c1d2e_add_fts5_external_content_table.py  9c2a8f6d0f7b_create_base_ops_tables.py  __init__.py  a1f6e7c9d2b4_add_fts5_trigger_sync.py  a3b4c5d6e7f8_add_items_embedding_column.py  b1a2c3d4e5f6_merge_auth_and_pause_heads.py  c2f9c1e5a7b3_add_required_secondary_indexes.py  c4a3d2b1f6e8_add_auth_session_telegram_session.py  d4b1e2c7a9f5_add_key_rotation_metadata.py  e7c8d9f0a1b2_add_auth_session_state.py  f2c7a8b1d3e4_add_account_pause_flags.py  f9a1b2c3d4e6_add_poll_jobs_table.py
docs/: implementation-plan.md  migration-policy.md  option-a-local-design.md  release-checklist.md  testing-guide.md
scripts/: __init__.py  check_api_response_models.py  check_broad_exception_catch.py  check_execution_record_shas.py  check_hardcoded_test_dates.py  check_migration_downgrade_coverage.py  check_testclient_context.py  codex_plan_cycle_runner.py  lint_strict.sh  run_codex_plan_cycle_long.sh  validate_plan_criteria.py
tca/: __init__.py
tca/api/: __init__.py  app.py  bearer_auth.py  cookie_auth.py
tca/auth/: __init__.py  account_storage.py  auth_session_state.py  bootstrap_token.py  encryption_utils.py  kdf.py  key_material.py  key_rotation.py  service.py  session_storage.py  unlock_modes.py
tca/bot/: __init__.py  client.py  delivery.py  (+1 more)
tests/: __init__.py  conftest.py
(+202 files in other folders)
