[project]
name = "tca"
version = "0.1.0"
description = "Threaded channel aggregator with cross-source deduplication"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "telethon>=1.42,<1.43",
    "jinja2>=3.1,<4.0",
    "rapidfuzz>=3.9,<4.0",
    "argon2-cffi>=23.1,<24.0",
    "cryptography>=43,<45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pyright>=1.1.380,<2.0",
    "basedpyright>=1.22,<2.0",
    "pre-commit>=3.8,<4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "T20", "RET", "ARG", "ERA", "RUF"]
ignore = ["D203", "D213"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
